<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num1"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="num2"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_num1"
        />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_num2"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:text="15"
        android:textSize="44sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="+"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toStartOf="@id/btn_sub"
        app:flow_horizontalBias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        />

    <Button
        android:id="@+id/btn_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="-"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        />
    <Button
        android:id="@+id/btn_mult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="*"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toStartOf="@id/btn_sub"
        app:flow_horizontalBias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        />

    <Button
        android:id="@+id/btn_div"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="/"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_mult"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        />

</androidx.constraintlayout.widget.ConstraintLayout>